third_party/WebKit/Source/core/inspector/InspectorCSSAgent.cpp
@@ -710,6 +710,12 @@ void InspectorCSSAgent::mediaQueryResultChanged()
     frontend()->mediaQueryResultChanged();
 }
 
+void InspectorCSSAgent::fontsUpdated()
+{
+    flushPendingProtocolNotifications();
+    frontend()->fontsUpdated();
+}
+
 void InspectorCSSAgent::activeStyleSheetsUpdated(Document* document)
 {
     if (m_isSettingStyleSheetText)
