third_party/WebKit/Source/core/inspector/InspectorCSSAgent.h
@@ -119,6 +119,7 @@ public:
 
     void activeStyleSheetsUpdated(Document*);
     void documentDetached(Document*);
+    void fontsUpdated();
 
     void enable(ErrorString*, std::unique_ptr<EnableCallback>) override;
     void disable(ErrorString*) override;
