third_party/WebKit/Source/devtools/front_end/sdk/CSSModel.js
@@ -63,6 +63,7 @@ WebInspector.CSSModel = function(target)
 
 WebInspector.CSSModel.Events = {
     LayoutEditorChange: "LayoutEditorChange",
+    FontsUpdated: "FontsUpdated",
     MediaQueryResultChanged: "MediaQueryResultChanged",
     ModelWasEnabled: "ModelWasEnabled",
     PseudoStateForced: "PseudoStateForced",
@@ -759,6 +760,11 @@ WebInspector.CSSModel.prototype = {
         this.dispatchEventToListeners(WebInspector.CSSModel.Events.MediaQueryResultChanged);
     },
 
+    fontsUpdated: function()
+    {
+        this.dispatchEventToListeners(WebInspector.CSSModel.Events.FontsUpdated);
+    },
+
     /**
      * @param {!CSSAgent.StyleSheetId} id
      * @return {?WebInspector.CSSStyleSheetHeader}
@@ -1097,6 +1103,14 @@ WebInspector.CSSDispatcher.prototype = {
     mediaQueryResultChanged: function()
     {
         this._cssModel.mediaQueryResultChanged();
+    },
+
+    /**
+     * @override
+     */
+    fontsUpdated: function()
+    {
+        this._cssModel.fontsUpdated();
     },
 
     /**
